# rust_full_stack

./: .env  .gitignore  Cargo.toml  README.md  test.py
static/: 404.css  404.html
web_service/: Cargo.toml
web_service/src/: error.rs  main.rs  routers.rs  state.rs
web_service/src/db_access/: course.rs
web_service/src/handlers/: course.rs  general.rs
web_service/src/models/: course.rs
