[workspace]
name = "rust_full_stack"
package.version = "0.1.0"
package.edition = "2024"
package.authors = ["hjuy"]
resolver = "3"
members = ["web_service"]

[workspace.dependencies]
axum = { version = "0.8" }
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
# openssl = { version = "0.10", features = ["vendored"] }
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
] }
