[package]
name = "web_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "teacher_service"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenvy.workspace = true
# openssl.workspace=true
sqlx.workspace = true


[[bin]]
name = "teacher_service"
